--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,11 @@
             "@php artisan key:generate",
             "@php artisan migrate --force",
             "npm install",
-            "npm run build"
+            "npm run build",
+            "git config core.hooksPath .githooks"
+        ],
+        "post-install-cmd": [
+            "git config core.hooksPath .githooks || true"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
